--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
           <li><a href="#vidaNoCampus">Vida no campus</a></li>
-          <li><a href="#Conquistas">Conquistas</a></li>
-          <li><a href="#Novidades">O que há de novo</a></li>
-          <li><a href="#Contato">Fale conosco</a></li>
+          <li><a href="#videos">Conquistas</a></li>
+          <li><a href="#Trabalhos">O que há de novo</a></li>
+          <li><a href="#Escritos">Fale conosco</a></li>
         </ul>
       </div>
     </nav>
